# PaperForge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: paperforge.mjs
src/: App.tsx  styles.css  types.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/i18n/: index.ts
src/lib/: api.ts  domain.ts
